Fix logo on mobiles.

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -209,7 +209,7 @@ fieldset[disabled] .btn-xl.active {
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
     font-size: 10px;
-    padding: 7px 10px;
+    padding: 7px 5px;
     margin: 12px 0px 0px 5px;
     font-weight: 400;
     letter-spacing: 1px;
@@ -753,13 +753,25 @@ section#about #sensibilisation {
   position: relative;
 }
 
+
 #logo {
   position: absolute;
-  width: 256px;
+  width: 140px;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
   transition: all .3s;
-  top: -15px;
+  top: 0px;
+}
+
+@media (min-width: 768px) {
+	#logo {
+  	  position: absolute;
+  	  width: 256px;
+  	  -webkit-transition: all .3s;
+  	  -moz-transition: all .3s;
+  	  transition: all .3s;
+  	  top: -15px;
+	}
 }
 
 .navbar-shrink #logo {
